# BitmapEditor

./: CMakeLists.txt  imagefile.cpp  imagefile.h  mainwindow.cpp  mainwindow.h
